fix problems with showing photo

--- a/TaskNum1/templates/pages/profile.html
+++ b/TaskNum1/templates/pages/profile.html
@@ -25,7 +25,7 @@
         <div class="card">
             <div class="card-body">
                 <div class="media"><span
-                        style="background-image: url({% static user_profile_photo %})"
+                        style="background-image: url({% static user_profile_photo %}"
                         class="avatar avatar-xl mr-3"></span>
                     <div class="media-body">
                         <h4>{{ request.user.username }}</h4>
@@ -41,7 +41,7 @@
         <div class="card-body">
         <div class="row mb-3">
             <div class="col-auto d-flex align-items-center"><span
-                    style="background-image: url({% static user_profile_photo %})"
+                    style="background-image: url({% static user_profile_photo %}"
                     class="avatar avatar-lg"></span></div>
             <div class="col">
                 <div class="form-group">
